# MemoryHub

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CITATION.cff  CLA.md  CONTRIBUTING.md  LICENSE  LLM-guide.md  NOTICE  README.md  README_old.md  justfile  llms-install.md  pyproject.toml  requirements.txt  roadmap.md  server.json
.agents/: DOCUMENTATIONS.md  README.md  agent-basics-handoff.md
.agents/agent-mailbox/: README.md
.agents/commands/: spec.md  test-live.md
docs/: ARCHITECTURE.md  NOTE-FORMAT.md  ai-assistant-guide-extended.md  character-handling.md  mcp-ui-bakeoff-instructions.md  metadata-search.md  openviking-compatibility.md  post-v0.18.0-test-plan.md  semantic-search-test-log.md  semantic-search.md  testing-coverage.md
docs/specs/: SPEC-SCHEMA-IMPL.md  SPEC-SCHEMA.md
scripts/: install-memoryhub.py
src/basic_memory/: config.py  db.py  ignore_utils.py  project_resolver.py  runtime.py  utils.py
src/memoryhub/: __init__.py  config.py  db.py  deps.py  env_compat.py  file_utils.py  (+5 more)
test-int/: BENCHMARKS.md  conftest.py  test_db_wal_mode.py  test_disable_permalinks_integration.py  test_search_performance_benchmark.py
tests/: README.md  __init__.py  conftest.py  test_alembic_migrations.py  test_backup.py  test_cli.py  test_config.py  test_deps.py  test_install.py  test_layout.py  test_markdown_source.py  test_mcp.py  test_memoryhub_env_aliases.py  test_openviking_contract.py  test_production_cascade_delete.py  test_project_registry.py  test_project_resolver.py  test_project_selection.py  test_registry.py  test_runtime.py  test_sqlite_index.py
(+415 files in other folders)
